--- a/live-ingester/pom.xml
+++ b/live-ingester/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -8,10 +9,9 @@
 		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 
-	<packaging>jar</packaging>
-	<artifactId>alfresco-hxinsight-connector-live-ingester</artifactId>
 	<name>Alfresco Connector for Hyland Experience Insight :: Live Ingester</name>
-	<version>0.0.4-SNAPSHOT</version>
+	<artifactId>alfresco-hxinsight-connector-live-ingester</artifactId>
+	<packaging>jar</packaging>
 
 	<dependencies>
 		<dependency>
