--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,10 @@
         <skipUnitTests>${skipTests}</skipUnitTests>
         <skipIntegrationTests>${skipTests}</skipIntegrationTests>
 
-        <acs-event-model.version>0.0.24</acs-event-model.version>
+        <acs-event-model.version>0.0.25</acs-event-model.version>
         <spring-boot.version>3.2.1</spring-boot.version>
         <spring-camel.version>4.3.0</spring-camel.version>
-        <aws-sdk-s3.version>2.22.9</aws-sdk-s3.version>
+        <aws-sdk-s3.version>2.23.3</aws-sdk-s3.version>
         <wiremock.version>3.3.1</wiremock.version>
 
         <testcontainers.version>1.19.3</testcontainers.version>
@@ -70,7 +70,7 @@
         <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <license-maven-plugin.version>2.3.0</license-maven-plugin.version>
         <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
-        <spotless-plugin.version>2.41.1</spotless-plugin.version>
+        <spotless-plugin.version>2.42.0</spotless-plugin.version>
 
         <!-- Used by the generated .env file for docker-compose. -->
         <dist.alfresco.version>23.1.1</dist.alfresco.version>
@@ -290,6 +290,7 @@
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot.version}</version>
                     <configuration>
                         <classifier>app</classifier>
                     </configuration>
