--- a/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
+++ b/live-ingester/src/integration-test/resources/rest/hxinsight/requests/create-or-update-document.yml
@@ -8,10 +8,11 @@ body: [
   {
     "objectId": "d71dd823-82c7-477c-8490-04cb0e826e65",
     "sourceId": "alfresco-dummy-source-id-0a63de491876",
-    "eventType": "update",
+    "eventType": "createOrUpdate",
     "sourceTimestamp": 1611656982995,
     "properties": {
       "cm:title": {
+        "type": "string",
         "value": "Purchase Order"
       },
       "aspectsNames": {
@@ -34,7 +35,12 @@ body: [
         "value": 1611227655695,
         "annotation": "dateModified"
       },
+      "cm:versionType": {
+        "type": "string",
+        "value": "MAJOR"
+      },
       "cm:versionLabel": {
+        "type": "string",
         "value": "1.0"
       },
       "createdBy": {
@@ -42,6 +48,7 @@ body: [
         "annotation": "createdBy"
       },
       "ALLOW_ACCESS": {
+        "type": "string",
         "value": [
           "GROUP_EVERYONE"
         ]
@@ -55,6 +62,7 @@ body: [
         "annotation": "type"
       },
       "DENY_ACCESS": {
+        "type": "string",
         "value": []
       },
       "cm:content": {
@@ -66,10 +74,6 @@ body: [
           }
         }
       }
-    },
-    "removedProperties": [
-      "cm:versionType",
-      "cm:description"
-    ]
+    }
   }
 ]
